# beam-time

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix
beam_logic/: Cargo.toml  misc.rs  tile.rs
beam_logic/level/: case.rs  default.rs  mod.rs  tree.rs
beam_logic/simulation/: acceleration.rs  level_state.rs  mod.rs  state.rs  tick.rs  tile.rs
beam_logic/simulation/runtime/: asynchronous.rs  testing.rs
beam_logic/src/: async_runtime.rs  level.rs  level_state.rs  lib.rs  state.rs  tick.rs  tile.rs
beam_logic/src/level/: case.rs  mod.rs
beam_logic/src/simulation/: async_runtime.rs  level_state.rs  mod.rs  state.rs  tick.rs  tile.rs
beam_logic/src/simulation/runtime/: asynchronous.rs  mod.rs  testing.rs
beam_time/: Cargo.toml  app.rs  assets.rs  build.rs  consts.rs  leaderboard.rs  main.rs  steam.rs
beam_time/assets/: font.ron
beam_time/assets/fonts/: alagard.ron  undead-pixel-11.ron
beam_time/assets/levels/: 10_half_adder.ron  10_xor_gate.ron  12_even_oscillators.ron  15_count_ones.ron  2_slightly_less_basic_routing.ron  3_not_gate.ron  4_and_gate.ron  5_or_gate.ron  6_basic_oscillator.ron  6_synchronization.ron  7_multiplexer.ron  7_synchronization.ron  8_two_tick_cock.ron  8_two_way_multiplexer.ron  9_half_adder.ron  and_gate.ron  basic_oscillator.ron  basic_routing.ron  conway_life.ron  count_ones.ron  counter.ron  double_it.ron  edge_detectors.ron  even_oscillators.ron  four_bit_not.ron  full_adder.ron  gated_d_latch.ron  half_adder.ron  level_1.ron  level_2.ron  level_3.ron  level_9.ron  not_gate.ron  or_gate.ron  rs_latch.ron  seven_segment_driver.ron  slightly_less_basic_routing.ron  synchronization.ron  t_flip_flop.ron  two_tick_clock.ron  (+2 more)
beam_time/game/: achievements.rs  history.rs  holding.rs  input.rs  mod.rs  pancam.rs  selection.rs  shared_state.rs
beam_time/game/board/: mod.rs  unloaded.rs  upgrade.rs
beam_time/game/render/: beam.rs  board.rs  mod.rs  notes.rs  tile.rs
beam_time/graphics/: font.aseprite  tilemap.aseprite
beam_time/integrations/: discord.rs  mod.rs  steam.rs
beam_time/screens/: about.rs  campaign.rs  campaign_tree.rs  debug_overlay.rs  layout_tests.rs  mod.rs  sandbox.rs  title.rs
beam_time/screens/campaign/: layout.rs  mod.rs
beam_time/screens/campaign_tree/: layout.rs  mod.rs
beam_time/screens/game/: mod.rs  note_edit_modal.rs  paused_modal.rs  solutions_modal.rs
beam_time/screens/sandbox/: create_modal.rs  mod.rs
beam_time/screens/title/: about.rs  mod.rs
beam_time/src/: app.rs  assets.rs  consts.rs  leaderboard.rs  main.rs  steam.rs  util.rs
beam_time/src/game/: achievements.rs  beam.rs  board.rs  history.rs  holding.rs  level.rs  mod.rs  render.rs  selection.rs  shared_state.rs  tile.rs
beam_time/src/game/beam/: level.rs  mod.rs  state.rs  tick.rs  tile.rs
beam_time/src/game/board/: mod.rs  upgrade.rs
beam_time/src/game/render/: beam.rs  board.rs  mod.rs  notes.rs
beam_time/src/misc/: direction.rs  map.rs  mod.rs
beam_time/src/overlay/: debug.rs
beam_time/src/screens/: about.rs  campaign.rs  debug_overlay.rs  game.rs  layout_tests.rs  levels.rs  mod.rs  options.rs  pong.rs  sandbox.rs  title.rs
beam_time/src/screens/game/: mod.rs  note_edit_modal.rs  paused_modal.rs
beam_time/src/screens/overlay/: debug.rs  mod.rs  ticker.rs
beam_time/src/ui/: button.rs  confetti.rs  level_panel.rs  misc.rs  mod.rs  modal.rs  model.rs  pixel_line.rs  text_input.rs  tile_picker.rs  waterfall.rs
beam_time/src/ui/components/: button.rs  mod.rs  modal.rs  slider.rs  text_input.rs
beam_time/src/ui/layout/: column.rs
beam_time/src/ui/level_panel/: level_status.rs  mod.rs  test_case.rs
beam_time/src/util/: hwid.rs  mod.rs
beam_time/ui/: confetti.rs  misc.rs  mod.rs  pixel_line.rs  tile_picker.rs  tutorial.rs  waterfall.rs
beam_time/ui/board_operations/: create.rs  delete.rs  mod.rs
beam_time/ui/components/: button.rs  checkbox.rs  histogram.rs  horizontal_rule.rs  key.rs  manual_button.rs  mod.rs  modal.rs  slider.rs  text_input.rs  toggle.rs
beam_time/ui/level_panel/: level_status.rs  mod.rs  test_case.rs
beam_time/util/: hwid.rs  mod.rs  time.rs
common/: lib.rs  (+5 more)
engine/: Cargo.toml  application.rs  color.rs  graphics_context.rs  input.rs  lib.rs  memory.rs  misc.rs
engine/application/: input.rs  mod.rs  window.rs
engine/assets/: constructor.rs  manager.rs
engine/audio/: mod.rs
engine/drawable/: dummy.rs  mod.rs  spacer.rs  sprite.rs
engine/drawable/shape/: circle.rs  line.rs  rectangle.rs  rectangle_outline.rs
engine/drawable/text/: layout.rs  mod.rs
engine/layout/: bounds.rs  column.rs  container.rs  convenience.rs  mod.rs  root.rs  row.rs  tracker.rs
engine/render/shape/: pipeline.rs  render.rs
engine/render/sprite/: consts.rs  pipeline.rs  render.rs  sprite.wgsl
engine/src/: application.rs  color.rs  graphics_context.rs  input.rs  lib.rs  matrix_stack.rs  memory.rs  screens.rs  sprites.rs  state.rs
engine/src/assets/: constructor.rs  font.rs  manager.rs  mod.rs
engine/src/audio/: mod.rs
engine/src/drawable/: dummy.rs  mod.rs  rectangle.rs  spacer.rs  sprite.rs  sprites.rs  text.rs
engine/src/drawable/shape/: circle.rs  line.rs  mod.rs  rectangle.rs  rectangle_outline.rs
engine/src/drawable/text/: layout.rs  mod.rs
engine/src/layout/: bounds.rs  column.rs  container.rs  hovered.rs  mod.rs  root.rs  row.rs  tracker.rs
engine/src/render/: consts.rs  mod.rs  sprite.rs
engine/src/render/shaders/: sprite.wgsl
engine/src/screens/: mod.rs  title.rs
leaderboard/: Cargo.toml  config.rs  config.toml  logger.rs  main.rs
leaderboard/api/: hmac.rs  mod.rs  results.rs
leaderboard/database/: histograms.rs  mod.rs  results.rs  types.rs
leaderboard/database/sql/: create_histograms.sql  upsert_results.sql
leaderboard/middleware/: version.rs
leaderboard/routes/: get_results.rs  get_root.rs  mod.rs  put_results.rs
leaderboard/src/: app.rs  main.rs
leaderboard/src/api/: hmac.rs  results.rs
leaderboard/src/database/: histograms.rs  id_key.rs  mod.rs  types.rs
leaderboard/src/routes/: get_results.rs  mod.rs  put_results.rs
(+95 files in other folders)
