[workspace]
members = ["beam_logic", "beam_time", "common", "engine", "leaderboard"]
resolver = "2"

[workspace.dependencies]
afire = { version = "3.0.0-alpha.3", features = [
    "tracing",
    "extensions",
], default-features = false }
anyhow = "1.0.88"
bincode = "1.3.3"
bytemuck = { version = "1.18.0", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
clone-macro = "0.1.0"
const-fnv1a-hash = "1.1.0"
dirs = "5.0.1"
env_logger = "0.11.5"
image = "0.25.2"
indoc = "2.0.5"
log = "0.4.22"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
once_cell = "1.20.2"
parking_lot = "0.12.3"
poll-promise = { version = "0.3.0", features = ["smol", "smol_tick_poll"] }
pollster = "0.3.0"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
rodio = "0.19.0"
ron = "0.8.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.133"
thousands = "0.2.0"
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
url = "2.5.4"
wgpu = "22.1.0"
winit = "0.30.5"
