[workspace]
members = ["beam_logic", "beam_time", "common", "engine", "leaderboard"]
resolver = "2"

[workspace.dependencies]
afire = { version = "3.0.0-alpha.3", features = [
    "tracing",
    "extensions",
], default-features = false }
ahash = "0.8.11"
anyhow = "1.0.88"
bincode = "1.3.3"
bytemuck = { version = "1.18.0", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
clone-macro = "0.1.0"
const-fnv1a-hash = "1.1.0"
ctrlc = "3.4.5"
dirs = "5.0.1"
encase = { version = "0.10.0", features = ["nalgebra"] }
env_logger = "0.11.5"
hex = "0.4.3"
hmac = "0.12.1"
image = "0.25.2"
indoc = "2.0.5"
log = "0.4.22"
md5 = "0.7.0"
nalgebra = { version = "0.33.0", features = ["serde-serialize", "bytemuck"] }
once_cell = "1.20.2"
parking_lot = "0.12.3"
poll-promise = "0.3.0"
pollster = "0.3.0"
rand = "0.8.5"
rodio = "0.19.0"
ron = "0.8.1"
rusqlite = { version = "0.32.1", features = ["bundled", "uuid", "blob"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
thousands = "0.2.0"
toml = "0.8.19"
unindent = "0.2.3"
ureq = { version = "2.11.0", features = ["json"] }
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
wgpu = "22.1.0"
winit = "0.30.5"
winreg = "0.52.0"
windows = { version = "0.58.0", features = [
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Security_Authorization",
] }
