[workspace]
members = ["beam_logic", "beam_time", "common", "engine", "leaderboard"]
resolver = "2"

[workspace.dependencies]
afire = { version = "3.0.0-alpha.3", features = [
    "tracing",
    "extensions",
], default-features = false }
ahash = "0.8.12"
anyhow = "1.0.98"
bincode = "1.3.3"
bitflags = "2.9.1"
bytemuck = { version = "1.23.1", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
clone-macro = "0.1.0"
const-fnv1a-hash = "1.1.0"
crossbeam-channel = "0.5.15"
ctrlc = "3.4.7"
dirs = "5.0.1"
encase = { version = "0.10.0", features = ["nalgebra"] }
env_logger = "0.11.8"
hex = "0.4.3"
hmac = "0.12.1"
image = "0.25.6"
indoc = "2.0.6"
itertools = "0.14.0"
log = "0.4.27"
md5 = "0.7.0"
nalgebra = { version = "0.33.2", features = ["serde-serialize", "bytemuck"] }
objc2-core-foundation = "0.3.1"
objc2-io-kit = "0.3.1"
once_cell = "1.21.3"
ordered-float = "5.0.0"
parking_lot = "0.12.4"
poll-promise = "0.3.0"
pollster = "0.3.0"
rand = "0.9.2"
rodio = "0.19.0"
ron = "0.8.1"
rusqlite = { version = "0.32.1", features = ["bundled", "uuid", "blob"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sha2 = "0.10.9"
slug = "0.1.6"
thousands = "0.2.0"
toml = "0.9.2"
trash = "5.2.2"
unindent = "0.2.4"
ureq = { version = "3.0.12", features = ["json"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
webbrowser = "1.0.5"
wgpu = "22.1.0"
windows = { version = "0.58.0", features = [
    "Win32_Security_Authorization",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Threading",
] }
winit = "0.30.11"
winreg = "0.52.0"
winres = "0.1.12"
