[package]
name = "beam_logic"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
common = { path = "../common" }

ahash.workspace = true
anyhow.workspace = true
clone-macro.workspace = true
log.workspace = true
nalgebra.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
ron.workspace = true
serde.workspace = true
unindent.workspace = true
uuid.workspace = true
