[package]
name = "beam_time"
version = "0.1.0"
edition = "2021"

[features]
steam = ["steamworks"]

[dependencies]
beam_logic = { path = "../beam_logic" }
common = { path = "../common" }
engine = { path = "../engine" }
leaderboard = { path = "../leaderboard" }

anyhow.workspace = true
bincode.workspace = true
chrono.workspace = true
clone-macro.workspace = true
dirs.workspace = true
env_logger.workspace = true
hex.workspace = true
image.workspace = true
indoc.workspace = true
log.workspace = true
md5.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
poll-promise.workspace = true
rand.workspace = true
ron.workspace = true
serde_json.workspace = true
serde.workspace = true
steamworks = { version = "0.11.0", optional = true }
thousands.workspace = true
toml.workspace = true
ureq.workspace = true
url.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
winreg.workspace = true
windows.workspace = true
