[package]
name = "beam_time"
version = "1.2.0"
edition = "2024"

[[bin]]
name = "beam_time"
path = "main.rs"

[features]
steam = ["steamworks"]
discord = ["discord-presence"]
layout_debug = ["engine/layout_debug"]

[dependencies]
beam_logic = { path = "../beam_logic" }
common = { path = "../common" }
engine = { path = "../engine" }
leaderboard = { path = "../leaderboard" }

discord-presence = { version = "2.1", optional = true }
steamworks = { version = "0.12.0", optional = true }

ahash.workspace = true
anyhow.workspace = true
arboard.workspace = true
base64.workspace = true
bincode.workspace = true
bitflags.workspace = true
chrono.workspace = true
clone-macro.workspace = true
crossbeam-channel.workspace = true
dirs.workspace = true
env_logger.workspace = true
hex.workspace = true
image.workspace = true
indoc.workspace = true
itertools.workspace = true
log.workspace = true
md5.workspace = true
once_cell.workspace = true
ordered-float.workspace = true
parking_lot.workspace = true
poll-promise.workspace = true
rand.workspace = true
ron.workspace = true
serde.workspace = true
serde_json.workspace = true
slug.workspace = true
thousands.workspace = true
toml.workspace = true
trash.workspace = true
ureq.workspace = true
url.workspace = true
uuid.workspace = true
webbrowser.workspace = true

[target.'cfg(windows)'.build-dependencies]
winres.workspace = true

[target.'cfg(windows)'.dependencies]
winreg.workspace = true
windows.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation.workspace = true
objc2-io-kit.workspace = true
