[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
const-fnv1a-hash.workspace = true
encase.workspace = true
image.workspace = true
nalgebra.workspace = true
pollster.workspace = true
rodio.workspace = true
serde.workspace = true
wgpu.workspace = true
winit.workspace = true
