[package]
name = "leaderboard"
version = "0.1.0"
edition = "2021"

[dependencies]
beam_logic = { path = "../beam_logic" }
common = { path = "../common" }

afire.workspace = true
anyhow.workspace = true
ctrlc.workspace = true
hex.workspace = true
hmac.workspace = true
log.workspace = true
native_db.workspace = true
native_model.workspace = true
once_cell.workspace =true
parking_lot.workspace = true
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
toml.workspace = true
uuid.workspace = true